Error while merging... Dsl Jonathan but I don't have time to fix it, good luck....

--- a/demo/demo-wrapper.html
+++ b/demo/demo-wrapper.html
@@ -55,7 +55,7 @@
                 this.$.inspector.bindBuilder(new DudeSaver());
             },
             _graphSaved: function (e) {
-                console.log(e.detail);
+                console.log(JSON.stringify(e.detail, null, 2));
             },
             _graphCompiled: function (e) {
                 console.log(e.detail);
