Started to fix merge

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codegraph - Demo</title>
+    <title>dude-graph - Demo</title>
     <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <!-- firefox didn't for without adding this links in the index -->
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
