Refactored style for dude-style and fixed all buildBlock methods.

--- a/demo/dude-style.html
+++ b/demo/dude-style.html
@@ -1,79 +1,2 @@
-<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
-<style is="custom-style">
-    :root {
-
-        /**
-         * General style
-         */
-
-        --dude-title-text-font: "Josefin Sans", sans-serif;
-        --dude-content-text-font: "Josefin Sans", sans-serif;
-        --dude-primary-text-font: "Josefin Sans", sans-serif;
-
-        --dude-title-text-color: #eeeeee;
-        --dude-content-text-color: #aaaaaa;
-        --dude-primary-text-color: #222222;
-
-        --dude-primary-color: #ffe488;
-        --dude-primary-background-color: #222222;
-        --dude-secondary-background-color: #333333;
-
-        --dude-type-stream-color: #aaaaaa;
-        --dude-type-boolean-color: #cc99cd;
-        --dude-type-number-color: #5990bd;
-        --dude-type-range-color: #5990bd;
-        --dude-type-vec2-color: #52b6bd;
-        --dude-type-vec3-color: #7dbdbd;
-        --dude-type-vec4-color: #8fbdb8;
-        --dude-type-string-color: #aac563;
-        --dude-type-choice-color: #aac563;
-        --dude-type-resource-color: #ffa8c2;
-        --dude-type-property-color: #d9b762;
-        --dude-type-transform-color: #d9b762;
-        --dude-type-entity-color: #d9b762;
-        --dude-type-behavior-color: #d9b762;
-        --dude-type-manager-color: #d9b762;
-
-        /**
-         * `dude-graph` element
-         */
-
-        /* groups */
-
-        --dude-graph-group: {
-             transition-duration: .2s;
-             transition-property: stroke-width;
-             fill: #fff;
-             stroke: #fff;
-             opacity: 0.1;
-        };
-
-        --dude-graph-group-hover: {
-             stroke-width: 10px;
-        };
-
-        --dude-graph-group-selected: {
-             opacity: 0.15;
-             stroke-width: 10px;
-        };
-
-        /* block */
-
-        --dude-graph-block: {
-             transition-duration: .2s;
-             transition-property: stroke-width;
-             fill: var(--dude-primary-background-color);
-             stroke: var(--dude-primary-background-color);
-             opacity: 0.7;
-        };
-
-        --dude-graph-block-hover: {
-            stroke-width: 10px;
-        };
-
-        --dude-graph-block-selected: {
-            stroke-width: 10px;
-            opacity: .9;
-        };
-    }
-</style>
+<link rel="import" href="dude-style-config.html">
+<link rel="import" href="dude-style-graph.html">
