Refactored css variables.

--- a/demo/dude-style-config.html
+++ b/demo/dude-style-config.html
@@ -30,5 +30,13 @@
         --dude-type-behavior-color: #d9b762;
         --dude-type-manager-color: #d9b762;
 
+        --dude-button: {
+             font-size: 0.9em;
+             text-transform: none;
+             border: 2px solid var(--dude-primary-color);
+             color: var(--dude-primary-color);
+             border-radius: 0;
+        };
+
     }
 </style>
