--- a/dude-graph.html
+++ b/dude-graph.html
@@ -15,7 +15,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <dom-module id="dude-graph">
     <style>
         #svg {
-            background: var(--cg-background-color);
+            background: var(--dude-secondary-background-color);
         }
     </style>
     <template>
