Dude style dialog

--- a/demo/dude-style-config.html
+++ b/demo/dude-style-config.html
@@ -38,5 +38,9 @@
              border-radius: 0;
         };
 
+        --dude-dialog: {
+            background: var(--dude-secondary-background-color);
+        };
+
     }
 </style>
