--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -26,6 +26,9 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             --paper-button: {
                  @apply(--dude-button);
              };
+            --paper-dialog: {
+                @apply(--dude-dialog);
+            };
         }
         :host {
             background: var(--dude-secondary-background-color);
