Fixed some of the style

--- a/dude-graph.html
+++ b/dude-graph.html
@@ -35,7 +35,6 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             fill: var(--dude-content-text-color);
             font-family: var(--dude-primary-text-font);
         }
-
         ::content .cg-title {
             fill: var(--dude-title-text-color);
             font-weight: bold;
@@ -53,60 +52,60 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
          * Groups
          */
         ::content .cg-group > rect {
-        @apply(--dude-graph-group);
+            @apply(--dude-graph-group);
         }
-
         ::content .cg-group:hover > rect {
-        @apply(--dude-graph-group-hover)
+            @apply(--dude-graph-group-hover)
         }
-
-        ::content .cg-group::content .cg-selected > rect {
-        @apply(--dude-graph-group-selected);
+        ::content .cg-group.cg-selected > rect {
+            @apply(--dude-graph-group-selected);
         }
 
         /**
          * Blocks
          */
         ::content .cg-block > rect {
-        @apply(--dude-graph-block);
+            @apply(--dude-graph-block);
         }
-
         ::content .cg-block:hover > rect {
-        @apply(--dude-graph-block-hover);
+            @apply(--dude-graph-block-hover);
         }
-
-        ::content .cg-block::content .cg-selected > rect {
-        @apply(--dude-graph-block-selected);
+        ::content .cg-block.cg-selected > rect {
+            @apply(--dude-graph-block-selected);
         }
 
         /**
          * Blocks and groups
          */
-        ::content .cg-block, ::content .cg-group {
+        ::content .cg-block,
+        ::content .cg-group {
             cursor: move;
         }
 
         /**
          * Points
          */
-        ::content .cg-input, ::content .cg-output {
+        ::content .cg-input,
+        ::content .cg-output {
             cursor: pointer;
         }
-
-        ::content .cg-input circle, ::content .cg-output circle,
-        ::content .cg-input path, ::content .cg-output path {
+        ::content .cg-input circle,
+        ::content .cg-output circle,
+        ::content .cg-input path,
+        ::content .cg-output path {
             stroke-width: 1;
             stroke: var(--dude-type-number-color);
             fill: var(--dude-type-number-color);
         }
-
-        ::content .cg-input::content .cg-stream circle, ::content .cg-output::content .cg-stream circle,
-        ::content .cg-input::content .cg-stream path, ::content .cg-output::content .cg-stream path {
+        ::content .cg-input.cg-stream circle,
+        ::content .cg-output.cg-stream circle,
+        ::content .cg-input.cg-stream path,
+        ::content .cg-output.cg-stream path {
             stroke: var(--dude-type-stream-color);
             fill: var(--dude-type-stream-color);
         }
-
-        ::content .cg-input::content .cg-empty path, ::content .cg-output::content .cg-empty path {
+        ::content .cg-input.cg-empty path,
+        ::content .cg-output.cg-empty path {
             fill: transparent;
         }
 
@@ -118,8 +117,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             stroke: var(--dude-type-number-color);
             fill: transparent;
         }
-
-        ::content .cg-connection::content .cg-stream {
+        ::content .cg-connection.cg-stream {
             stroke: var(--dude-type-stream-color);
         }
     </style>
