Fixed circle points in firefox

--- a/dude-graph.html
+++ b/dude-graph.html
@@ -57,6 +57,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         ::content .cg-group:hover > rect {
             @apply(--dude-graph-group-hover)
         }
+        ::content .cg-group.cg-active > rect,
         ::content .cg-group.cg-selected > rect {
             @apply(--dude-graph-group-selected);
         }
