Fix css classes for dude-graph.

--- a/demo/dude-style-graph.html
+++ b/demo/dude-style-graph.html
@@ -51,10 +51,10 @@
         fill: #333;
     }
 
-    .cg-variable .cg-output circle,
-    .cg-variable .cg-output path,
-    .cg-value .cg-output circle,
-    .cg-value .cg-output path{
+    .cg-variable .dude-graph-output circle,
+    .cg-variable .dude-graph-output path,
+    .cg-value .dude-graph-output circle,
+    .cg-value .dude-graph-output path{
         stroke-width: 1 !important;
         stroke: #333 !important;
         fill: #333 !important;
