--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
     <!-- firefox didn't for without adding this links in the index -->
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="../bower_components/components-font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link rel="import" href="dude-style.html">
+    <link rel="import" href="../bower_components/dude-style/dude-style.html">
     <link rel="import" href="demo-wrapper.html">
 </head>
 <body class="fullbleed">
